--- a/Css/style.css
+++ b/Css/style.css
@@ -114,7 +114,7 @@ header{
 }
 .item-edit__button{
     height: 42px;
-    width: 10%;
+    width: 8%;
     font-size: 14px;
     background: #0e860e;
     margin: 0 5px;
@@ -153,4 +153,160 @@ header{
 }
 .add-admin__form input:nth-last-child(-n +1):hover{
     background: #722323;
+}
+
+/* product tile block */
+
+.main__container{
+    display: flex;
+    margin-top: 10px;
+
+}
+.products__container{
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+}
+.filter__container{
+    width: 20%;
+}
+.product__tile{
+    width: 20%;
+    border-radius: 10px;
+    border: 1px solid #dfe0e3;
+    transition: all .5s ease 0ms;
+}
+.product__tile:hover{
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+.product__tile .product__img:hover{
+    transform: scale(1.1, 1.1);
+
+}
+.product__img-block{
+    margin: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+
+}
+.product__img{
+    width: 185px;
+    height: 200px;
+    transition: all .5s ease-in-out 0ms;
+    overflow: hidden;
+}
+.product__title{
+    margin: 0 0 0 5px;
+    word-wrap: normal;
+    height: 60px;
+    overflow: hidden;
+}
+.product__cost-block{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: 20px;
+    margin: 0 5px;
+}
+.product__cost{
+    color: #5897fb;
+    font-weight: bold;
+}
+.product__code{
+    color: #4f5d77;
+    font-size: 12px;
+}
+.product_buy-button{
+    width: 50%;
+    background-color: #5897fb;
+    color: white;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin: 5px;
+    height: 30px;
+    border-radius: 0 0 0 10px;
+    transition: background-color .5s ease 0ms;
+}
+.product_buy-button:hover{
+    background-color: #b43c3c;
+}
+
+/*  Login/Registration form  */
+
+.login-form__container{
+    position: absolute;
+    height: 300px;
+    width: 300px;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, 0px);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+.login-form__container--size{
+    height: 350px;
+}
+.login__form{position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+}
+.login__form input{
+    height: 40px;
+    width: 80%;
+    border-radius: 10px;
+    border: 1px solid #5897fb;
+    padding-left: 10px;
+}
+.login__form input:nth-last-child(-n +1) {
+    margin-top: 10px;
+    background-color: #b43c3c;
+    border: none;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: white;
+    transition: all .5s ease-in-out 0ms;
+}
+.login__form input:nth-last-child(-n +1):hover{
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+}
+
+.login__link{
+    text-decoration: none;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translate(-50%, 0px);
+    color: #0e860e;
+}
+.login__link:hover {
+    text-decoration: underline;
+}
+.close__form{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+    height: 25px;
+    text-decoration: none;
+    text-align: center;
+    padding-top: 5px;
+    color: #b43c3c;
+    font-weight: bold;
+    font-size: 18px;
+    transition: all .5s ease-in-out 0ms;
+}
+.close__form:hover{
+    background-color: #b43c3c;
+    color: white;
+    border-radius: 6px;
 }
